# spicerack/models/__init__.py
@@ -3,4 +3,5 @@
 # flake8: noqa
 from __future__ import absolute_import
 # import models into model package
-from swagger_server.models.metakernal import Metakernal
+from spicerack.models.metakernel import Metakernel
+from spicerack.models.metakernels import Metakernels
