# spicerack/models/metakernal.py
@@ -1,122 +1,0 @@
-# coding: utf-8
-
-from __future__ import absolute_import
-from datetime import date, datetime  # noqa: F401
-
-from typing import List, Dict  # noqa: F401
-
-from spicerack.models.base_model_ import Model
-from spicerack import util
-
-
-class Metakernal(Model):
-    """NOTE: This class is auto generated by the swagger code generator program.
-
-    Do not edit the class manually.
-    """
-
-    def __init__(self, year: str=None, version: float=None, path: str=None):  # noqa: E501
-        """Metakernal - a model defined in Swagger
-
-        :param year: The year of this Metakernal.  # noqa: E501
-        :type year: str
-        :param version: The version of this Metakernal.  # noqa: E501
-        :type version: float
-        :param path: The path of this Metakernal.  # noqa: E501
-        :type path: str
-        """
-        self.swagger_types = {
-            'year': str,
-            'version': float,
-            'path': str
-        }
-
-        self.attribute_map = {
-            'year': 'year',
-            'version': 'version',
-            'path': 'path'
-        }
-
-        self._year = year
-        self._version = version
-        self._path = path
-
-    @classmethod
-    def from_dict(cls, dikt) -> 'Metakernal':
-        """Returns the dict as a model
-
-        :param dikt: A dict.
-        :type: dict
-        :return: The metakernal of this Metakernal.  # noqa: E501
-        :rtype: Metakernal
-        """
-        return util.deserialize_model(dikt, cls)
-
-    @property
-    def year(self) -> str:
-        """Gets the year of this Metakernal.
-
-        Metakernel year  # noqa: E501
-
-        :return: The year of this Metakernal.
-        :rtype: str
-        """
-        return self._year
-
-    @year.setter
-    def year(self, year: str):
-        """Sets the year of this Metakernal.
-
-        Metakernel year  # noqa: E501
-
-        :param year: The year of this Metakernal.
-        :type year: str
-        """
-
-        self._year = year
-
-    @property
-    def version(self) -> float:
-        """Gets the version of this Metakernal.
-
-        Metakernel version  # noqa: E501
-
-        :return: The version of this Metakernal.
-        :rtype: float
-        """
-        return self._version
-
-    @version.setter
-    def version(self, version: float):
-        """Sets the version of this Metakernal.
-
-        Metakernel version  # noqa: E501
-
-        :param version: The version of this Metakernal.
-        :type version: float
-        """
-
-        self._version = version
-
-    @property
-    def path(self) -> str:
-        """Gets the path of this Metakernal.
-
-        Path to Metakernel  # noqa: E501
-
-        :return: The path of this Metakernal.
-        :rtype: str
-        """
-        return self._path
-
-    @path.setter
-    def path(self, path: str):
-        """Sets the path of this Metakernal.
-
-        Path to Metakernel  # noqa: E501
-
-        :param path: The path of this Metakernal.
-        :type path: str
-        """
-
-        self._path = path
