# spicerack/swagger/swagger.yaml
@@ -1,7 +1,7 @@
 ---
 swagger: "2.0"
 info:
-  description: "A SpiceAPI for extracting NAIF Spice Data"
+  description: "A resdtful API for performing queries on NAIF spice data."
   version: "0.1.0"
   title: "spicerack"
   contact:
@@ -13,46 +13,82 @@ host: "localhost:8080"
 basePath: "/v1"
 schemes:
 - "http"
-- "https"
 paths:
-  /missions/{mission}/metakernals/:
+  /metalkernels/:
     get:
-      summary: "Returns Kernels from query params"
+      summary: "Get a specific kernel"
       description: "Adds an item to the system"
       operationId: "get_metakernel"
       produces:
       - "application/json"
       parameters:
       - name: "mission"
-        in: "path"
+        in: "query"
+        required: true
+        type: "string"
+      - name: "year"
+        in: "query"
         required: true
         type: "string"
       - name: "version"
         in: "query"
-        required: false
+        required: true
         type: "string"
         default: "latest"
       responses:
         200:
           description: "Successful Kernel Search"
           schema:
-            $ref: "#/definitions/metakernal"
+            $ref: "#/definitions/metakernels"
         400:
           description: "invalid input, object invalid"
-      x-swagger-router-controller: "spicerack.controllers.get_metakernel"
+      x-swagger-router-controller: "spicerack.controllers.metakernels"
 definitions:
-  metakernal:
+  metakernel:
+    type: "object"
     properties:
-      year:
+      mission:
         type: "string"
+        description: "The mission which the metakernel belongs to"
+      year:
+        type: "integer"
         description: "Metakernel year"
       version:
-        type: "number"
+        type: "string"
         description: "Metakernel version"
       path:
         type: "string"
         description: "Path to Metakernel"
+    description: "Metakernel object"
     example:
-      path: "path"
-      year: "year"
+      paths:
+      - "/path1"
+      - "/path2"
+      year: 2017
       version: 106
+      mission: "Messenger"
+  metakernels:
+    type: "object"
+    properties:
+      count:
+        type: "integer"
+        description: "Number of metakernels returned"
+      kernels:
+        type: "array"
+        items:
+          $ref: "#/definitions/metakernel"
+    example:
+      count: 0
+      kernels:
+      - paths:
+        - "/path1"
+        - "/path2"
+        year: 2017
+        version: 106
+        mission: "Messenger"
+      - paths:
+        - "/path1"
+        - "/path2"
+        year: 2017
+        version: 106
+        mission: "Messenger"
